Merged to 3.0.1, harmonized a bit, added changelog compared to trunk, deleted unneeded projects